add alphabet buttons

--- a/index.html
+++ b/index.html
@@ -15,21 +15,31 @@
         <h1>Let's play hangman y'all!</h1>
       </div>
 
-      <div class="tries">
+      <div class="triesLeft">
         <p>Tries Remaining = <span id="triesLeft"></span></p>
 
       </div>
 
-      <div class="puzzle">
+      <div class="winOrLose">
+        <span id="winOrLose"></span>
+
+      </div>
+
+      <div class="newPuzzle">
         <span id="newPuzzle"></span>
 
       </div>
 
       <div class="letterBank">
+        <div class="table">
 
+          <span id="letterBank"></span>
+
+        </div>
       </div>
 
       <div class="usedLetterBank">
+        <span id="usedLetterBank"></span>
 
       </div>
 
